package com.arno.designmode.factory;

/**
 * Created by Arno on 2017/12/11.
 */

public interface IComputer {

    void work();

    void study();

}
