package com.arno.designmode.factory;

/**
 * Created by Arno on 2017/12/12.
 */

public interface IComputerFactory {
    IComputer createComputerA();
    IComputer createComputerB();
}
